--- a/builder/builder.html
+++ b/builder/builder.html
@@ -51,8 +51,7 @@
                 <h3>Presentation</h3>
                 <p>Now, let's define the table output that best communicates our formula results to the application users</p>
                 <button class="btn" id="addColumnBtn">Add Column</button>
-                <span style="margin-top: 1em;"></span>
-                <div class="form-group">
+                <div class="form-group" style="margin-top: 1em;">
                     <label for="primaryKey">Primary Key:</label>
                     <select id="primaryKey" class="form-control">
                         <!-- Options will be populated dynamically -->
