--- a/apps/profitability.html
+++ b/apps/profitability.html
@@ -11,32 +11,11 @@
     <div id="spinnerOverlay" class="spinner-overlay">
         <div class="spinner"></div>
     </div>
-    <div id="chartContainer">
-    </div>
+    <div id="chartContainer"></div>
     <div id="resultsTableContainer" class="table-container"></div> <!-- Container for results table -->
     <input type="checkbox" id="log-toggle"> Show Log
     <div id="log"></div>
-    <div id="configModal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <img src="../JS_box.png" alt="Logo">
-                <h2 id="modalTitle"></h2>
-                <span class="close">&times;</span>
-            </div>
-            <div class="modal-body">
-                <div class="file-input-wrapper">
-                    <input type="file" id="csvPipe" accept=".csv" multiple>
-                    <span id="fileNames" class="file-names">No file chosen</span>
-                </div>
-                <button id="run">
-                    Run
-                </button>
-                <h5>Version <span id="modalVersion"></span></h5>
-                <h4>Components</h4>
-                <ul class="component-list" id="componentList"></ul>
-            </div>
-        </div>
-    </div>
+    <div id="runModal" class="modal"></div>
     <script>
         window.buildConfig = {
             libraries: ['organization', 'financial', 'https://bankersiq.com/api/trates/'],
